# kafka-rc

./: .env.example  .env.testing  Cargo.toml  README.md  config.yaml  create-topic.sh  docker-compose.yml  prep.sh  read.sh  write.sh
rest/: README.md
rest/src/: lib.rs  main.rs  service_providers.rs
rest/src/config/: app.rs  database.rs
rest/tests/integration/: database.rs
scripts/: watch
src/: bootstrap.rs  configuration.rs  db.rs  lib.rs  main.rs  service_providers.rs  service_registry.rs
src/auth/: mod.rs  routes.rs
src/config/: database.rs  mod.rs
src/health_check/: mod.rs  routes.rs
src/kafka/: mod.rs  routes.rs
tests/integration/: health_check.rs  helpers.rs  main.rs  test_app.rs
