[package]
name = "clockwork"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "clockwork"

[[bin]]
path = "src/main.rs"
name = "clockwork"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0"}
dotenv = { version = "0.15.0"}
envy = { version = "0.4.2"}
serde-aux = "3"
secrecy = { version = "0.8", features = ["serde"] }
